consumindo api de products e user

--- a/shopping-api/pom.xml
+++ b/shopping-api/pom.xml
@@ -59,6 +59,12 @@
 			<artifactId>shopping-client</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<!-- Source: https://mvnrepository.com/artifact/org.springframework/spring-webflux -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webflux</artifactId>
+			<version>7.0.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
